<resources>
    <string name="app_name">QRCode</string>
    <!-- ADMOB_ID_TEST -->
    <!--    <string name="ADMOB_APP_ID" translatable="false">ca-app-pub-3940256099942544~3347511713</string>-->
    <!--    <string name="banner_ad_id_test" translatable="false">ca-app-pub-3940256099942544/9214589741</string>-->


    <string name="onboarding_one_title">Scan QR Code Instantly</string>
    <string name="onboarding_one_description">Simply open the app and scan any QR code for quick access to information,links and more</string>
    <string name="onboarding_second_title">Generate QR Code</string>
    <string name="onboarding_second_description">Create your own custom QR codes for websites, contact info, or any data you want to share instantly</string>
    <string name="onboarding_third_title">Save and Share Seamlessly</string>
    <string name="onboarding_third_description">Easily save and share your scanned or generated QR codes with friends and colleagues.</string>
    <string name="next">Next</string>
    <string name="splash_title">QR Code Scanner</string>
    <string name="splash_description">Live Scan &amp; Instantly Generate Your QR Code!</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="china">chinese</string>
    <string name="danish">Danish</string>
    <string name="dutch">Dutch</string>
    <string name="french">French</string>
    <!--    <string name="german">German</string>-->
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="bengali">Bengali</string>
    <string name="russian">Russian</string>
    <string name="portuguese">Portuguese</string>
    <string name="urdu">Urdu</string>
    <string name="indonesian">Indonesian</string>
    <string name="japanese">Japanese</string>
    <string name="swahili">Swahili</string>
    <string name="turkish">Turkish</string>
    <string name="korean">korean</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="scan">Scan</string>
    <string name="create">Create</string>
    <string name="result">Result</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_description">Give permission to access your camera for qr code scanner</string>
    <string name="allow">Allow</string>
    <string name="app_language">App Language</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="privacy">Privacy Policy</string>
    <string name="unlock_premium">unlock Premium</string>
    <string name="unlock_premium_desc">Enjoy 100% Ads-Free Experience</string>
    <string name="no_data">No Data</string>
    <string name="no_data_desc">Looks Like you haven\'t Added anything yet</string>
    <string name="search">Search</string>
    <string name="website">Website</string>
    <string name="clipboard">Clipboard</string>
    <string name="wifi">Wi-Fi</string>
    <string name="facebook">Facebook</string>
    <string name="youtube">Youtube</string>
    <string name="youtubeId">YouTube ID</string>
    <string name="youtubeUrl">YouTube URL</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="text">Text</string>
    <string name="contacts">Contacts</string>
    <string name="telephone">Telephone</string>
    <string name="email">E-mail</string>
    <string name="sms">SMS</string>
    <string name="my_card">My Card</string>
    <string name="paypal">Paypal</string>
    <string name="paypalLink">Paypal Link</string>
    <string name="paypalUrl">Paypal Url</string>
    <string name="instagram">Instagram</string>
    <string name="instagramId">Instagram ID</string>
    <string name="instagramUrl">Instagram Url</string>
    <string name="viber">Viber</string>
    <string name="twitter">X (Twitter)</string>
    <string name="twitterId">Twitter ID</string>
    <string name="twitterUrl">Twitter Url</string>
    <string name="calender">Calender</string>
    <string name="spotify">Spotify</string>
    <string name="gallery">Gallery</string>
    <string name="flashlight">Flashlight</string>
    <string name="manual">Manual</string>
    <string name="failed_to">Failed to scan. Tap here for Help.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copy">Copy</string>
    <string name="favourite">Favourite</string>
    <string name="share">Share</string>
    <string name="open_link">Open Link</string>
    <string name="point_your_camera">Point Your camera to Scan</string>
    <string name="avoid_glare">1. Avoid Glare or Shadows on the Code.</string>
    <string name="centre_code">2. Centre the Code in the Frame.</string>
    <string name="hold_your">3. Hold your Phone Steady and Parallel.</string>
    <string name="got_it">Got IT</string>
    <string name="enter_barcode_manually">Enter Barcode Manually</string>
    <string name="barcode_number">Barcode Number</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="details">Details</string>
    <string name="mayContains">This action may contain Ads</string>
    <string name="download">Download</string>
    <string name="dummyUrl"><![CDATA[https://www.figma.com/design/Z7zb0XIZgecvXrXrsH5YJf/QR-Code-Scanner(iBrainRank)?node-id=2-2&p=f&t=4oYeb4EWq19Y5UfG-0]]></string>
    <string name="websiteUrl">Website URL</string>
    <string name="https">https://</string>
    <string name="www">WWW.</string>
    <string name="com">.com</string>
    <string name="pleaseEnter">Please Enter Something</string>
    <string name="networkName">Network Name</string>
    <string name="password">Password</string>
    <string name="wpa">WPA/WPA2</string>
    <string name="wep">WEP</string>
    <string name="none">None</string>
    <string name="facebookId">Facebook ID</string>
    <string name="facebookUrl">Facebook URL</string>
    <string name="username">Username</string>
    <string name="url">URL</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="number">Number</string>
    <string name="emailAddress">Email Address</string>
    <string name="suject">Subject</string>
    <string name="content">Content</string>
    <string name="textMessage">Text Message</string>
    <string name="myName">My Name</string>
    <string name="address">Address</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="description">Description</string>
    <string name="artisName">Artist Name</string>
    <string name="songName">Song Name</string>
    <string name="tellUsProblem">Tell us the Problem you Encountered</string>
    <string name="slowApp">Slow App Response</string>
    <string name="crash"><![CDATA[Crashes & Bugs]]></string>
    <string name="improve">Improve UI</string>
    <string name="tooManyAds">Too many Ads</string>
    <string name="addMore">Add More Features</string>
    <string name="otherSuggestion">Others Suggestions</string>
    <string name="file">File Can’t be Opened</string>
    <string name="describe">Describe your feedback</string>
    <string name="describeDetails">Describe your feedback in details</string>
    <string name="submit">Submit</string>
    <string name="moreDetails">More Detailed Questions:</string>
    <string name="scanningTakesLong">Scanning Takes too long</string>
    <string name="scanningFailed">Scanning Failed</string>
    <string name="other">Others</string>
    <string name="invalidScanResult">Invalid Scan result</string>
    <string name="pleaseTellUs">Please Tell us as much Details as Possible about your Problems so that we can help you solve them Quickly</string>
    <string name="howLikely">How likely are you to recommend our app to your Friends and Colleagues?</string>
    <string name="yourGoodRating">"Your Good Rating inspire us to serve you better Services "</string>
    <string name="bestWe">The Best We can Get</string>
    <string name="cencel">Cancel</string>
    <string name="rateNow">Rate Now</string>
</resources>