<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/redx_pro"
        android:text="@string/point_your_camera"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/redx_pro"
            android:includeFontPadding="false"
            android:text="@string/avoid_glare"
            android:textColor="@color/b2"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/redx_pro"
            android:includeFontPadding="false"
            android:text="@string/centre_code"
            android:textColor="@color/b2"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/redx_pro"
            android:includeFontPadding="false"
            android:text="@string/hold_your"
            android:textColor="@color/b2"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/share"
        android:src="@drawable/help_qr_code" />

    <TextView
        android:id="@+id/btnGotIt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_curve"
        android:fontFamily="@font/redx_pro"
        android:paddingVertical="12dp"
        android:text="@string/got_it"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>