<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageOnboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/onboarding_1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/redx_pro"
        android:gravity="center"
        android:text="@string/onboarding_one_title"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/redx_pro"
        android:gravity="center"
        android:text="@string/onboarding_one_description"
        android:textAlignment="center"
        android:textColor="@color/text_color_description"
        android:textSize="14sp" />

</LinearLayout>