<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/manual_popup_bg"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/redx_pro"
        android:includeFontPadding="false"
        android:text="@string/enter_barcode_manually"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edt_bg_normal"
        android:fontFamily="@font/redx_pro"
        android:hint="@string/barcode_number"
        android:includeFontPadding="true"
        android:textColorHint="@color/b2"
        android:textCursorDrawable="@color/b4"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rlCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:background="@drawable/cancel_btn_bg"
            android:paddingVertical="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/redx_pro"
                android:includeFontPadding="false"
                android:text="@string/cancel"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@drawable/search_btn_bg"
            android:paddingVertical="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/redx_pro"
                android:includeFontPadding="false"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>