<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingVertical="16dp"
    tools:context=".fragments.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/redx_pro"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/primium_btn_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_language"
            android:src="@drawable/primium_icon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/redx_pro"
                android:text="@string/unlock_premium"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:fontFamily="@font/redx_pro"
                android:text="@string/unlock_premium_desc"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_language"
            android:src="@drawable/navigate_next_white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="8dp">

        <LinearLayout
            android:id="@+id/llAppLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_language"
                android:src="@drawable/settings_icon_lang" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/redx_pro"
                    android:text="@string/app_language"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:fontFamily="@font/redx_pro"
                    android:text="@string/english"
                    android:textColor="@color/b2"
                    android:textSize="12sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/app_language"
                android:src="@drawable/navigate_next" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llShareApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_language"
                android:src="@drawable/settings_icon_share" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/redx_pro"
                android:text="@string/share_app"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRateUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_language"
                android:src="@drawable/settings_icon_rate" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/redx_pro"
                android:text="@string/rate_us"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_language"
                android:src="@drawable/settings_icon_feed" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/redx_pro"
                android:text="@string/feedback"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_language"
                android:src="@drawable/settings_icon_privacy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/redx_pro"
                android:text="@string/privacy"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>