<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp">

    <TextView
        android:id="@+id/tvEnjoyingKeyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/redx_pro"
        android:includeFontPadding="false"
        android:text="@string/rate_us"
        android:textAlignment="center"
        android:textColor="@color/clr19"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvWorkHard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/outfit_regular"
        android:includeFontPadding="false"
        android:text="@string/yourGoodRating"
        android:textAlignment="center"
        android:textColor="@color/b2"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="12dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivStar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/slowApp"
                android:src="@drawable/star_rating_blank" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivStar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/slowApp"
                android:src="@drawable/star_rating_blank" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivStar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/slowApp"
                android:src="@drawable/star_rating_blank" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivStar4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/slowApp"
                android:src="@drawable/star_rating_blank" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivStar5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/slowApp"
                android:src="@drawable/star_rating_blank" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/outfit_regular"
                android:text="@string/bestWe"
                android:textAlignment="viewEnd"
                android:textColor="@color/b2"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/slowApp"
                android:scaleType="fitCenter"
                android:src="@drawable/rating_arrow" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_curve_disable"
            android:fontFamily="@font/outfit_medium"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <View
            android:layout_width="12dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/tvDone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_curve"
            android:fontFamily="@font/outfit_medium"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:text="@string/rateNow"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>