<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TabCreateFragment">

    <LinearLayout
        android:id="@+id/noDataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imgNoData"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/no_data"
            android:scaleType="centerCrop"
            android:src="@drawable/no_message" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/redx_pro"
            android:text="@string/no_data"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/redx_pro"
            android:text="@string/no_data_desc"
            android:textAlignment="center"
            android:textColor="@color/b2"
            android:textSize="14sp" />

    </LinearLayout>

    <RelativeLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/search_bar_bg"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ivSearchIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/search"
            android:src="@drawable/search_icon" />

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="8dp"
            android:layout_toEndOf="@id/ivSearchIcon"
            android:background="@null"
            android:hint="@string/search"
            android:includeFontPadding="false"
            android:textColor="@color/b2"
            android:textColorHint="@color/b2" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tabCreateLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchBar"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCreateHistory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:itemCount="5"
            tools:listitem="@layout/tab_scan_item" />

    </LinearLayout>

</RelativeLayout>